--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-./bsq [map]
+ Find the largest possible square on a board while avoiding obstacles.
+ The board is represented by a file passed as the program’s argument
+
+Usage: ./bsq [map]
